DOM Selection - query - Selector and SelectorAll

--- a/_3_4_DOM_Selection/index.html
+++ b/_3_4_DOM_Selection/index.html
@@ -48,6 +48,8 @@
       </section>
     </div>
 
-    <script src="script.js"></script>
+    <!-- <script src="a_getElementBy/script.js"></script> -->
+
+    <script src="b_query/script.js"></script>
   </body>
 </html>
