--- a/_3_4_DOM_Selection/index.html
+++ b/_3_4_DOM_Selection/index.html
@@ -50,6 +50,8 @@
 
     <!-- <script src="a_getElementBy/script.js"></script> -->
 
-    <script src="b_query/script.js"></script>
+    <!-- <script src="b_query/script.js"></script> -->
+
+    <script src="c_mengubah_node_root/script.js"></script>
   </body>
 </html>
