DOM Manipulation - Manipulasi Node
createElement()
createTextNode()
appendChild()
insertBefore()
removeChild()
replaceChild()

--- a/_5_6_DOM_Manipulation/index.html
+++ b/_5_6_DOM_Manipulation/index.html
@@ -55,7 +55,9 @@
 
     <!-- <script src="a_manipulasi_element/c_setAttribute.js"></script> -->
 
-    <script src="a_manipulasi_element/d_classList.js"></script>
+    <!-- <script src="a_manipulasi_element/d_classList.js"></script> -->
+
+    <script src="b_manipulasi_node/script.js"></script>
 
   </body>
 </html>
